--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 2,
-	"name": "Chrome Extension for Pi-Hole List Management",
+	"name": "Pi-Hole List Editor",
 	"description": "Add/Remove/View whitelist and blacklist entries on your PiHole. Requires Extension API Script and some configuration.",
 	"version": "1.0",
 	"options_ui": {
